payments UI fix

--- a/templates/my_games.html
+++ b/templates/my_games.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}My Games - GlitchPeachAI{% endblock %}
+{% block title %}GlitchPeachAI - Profile{% endblock %}
 
 {% block content %}
 <main>
